# loco_nuxt_template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-entrypoint.sh  justfile
.cargo/: config.toml
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
frontend/: nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/bindings/: CurrentResponse.ts  ForgotParams.ts  LoginParams.ts  LoginResponse.ts  MagicLinkParams.ts  RegisterParams.ts  ResetParams.ts
frontend/app/components/: CardFooterLink.vue
frontend/app/pages/: forgot.vue  index.vue  magic-link.vue  register.vue
frontend/app/pages/dashboard/: index.vue
frontend/app/stores/: user.ts
frontend/app/utils/: api.ts
src/: app.rs
src/controllers/: auth.rs
src/mailers/: auth.rs
src/mailers/auth/forgot/: html.t  text.t
src/mailers/auth/magic_link/: html.t  text.t
src/models/: users.rs
src/views/: auth.rs
tests/: mod.rs
tests/models/: users.rs
tests/models/snapshots/: can_find_by_email@users.snap  can_find_by_pid@users.snap
tests/prepare/: users.rs
tests/requests/: auth.rs
tests/requests/snapshots/: can_login_without_verify@auth_request.snap  login_with_valid_password@auth_request.snap  resend_verification_user@auth_request.snap
