[package]
name = "loco_nuxt_template"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
[workspace.dependencies]
loco-rs = { version = "0.16" }

[[bin]]
name = "loco_nuxt_template-cli"
path = "src/bin/main.rs"
required-features = []

[dependencies]
anyhow = "1.0.100"
async-trait = { version = "0.1" }
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["form"] }
chrono = { version = "0.4" }
include_dir = { version = "0.7" }
loco-rs = { workspace = true }
migration = { path = "migration" }
regex = { version = "1.11" }
sea-orm = { version = "1.1", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ts-rs = "11.1.0"
uuid = { version = "1.6", features = ["v4"] }
validator = { version = "0.20" }

[dev-dependencies]
fake = { version = "4.4.0", features = ["rust_decimal"] }
insta = { version = "1.34", features = ["filters", "redactions", "yaml"] }
loco-rs = { workspace = true, features = ["testing"] }
rstest = { version = "0.25" }
serial_test = { version = "3.1.1" }
